# chatgpt-mcp-fs

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.claude/: settings.local.json
src/: index.html  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  folders.rs  mod.rs  server.rs
src/src/: App.tsx  index.css  store.ts
src/src/components/: CredentialsCard.tsx  FolderList.tsx  LogViewer.tsx  ServerStatus.tsx
test-folder/: new-file.txt
