[package]
name = "chatgpt-mcp-fs"
version = "0.1.0"
description = "ChatGPT MCP File System Server with Tauri GUI"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"

[profile.release]
strip = true
lto = true
